[gd_scene load_steps=3 format=3 uid="uid://xba81mhilx5u"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_u4ce7"]
[ext_resource type="Texture2D" uid="uid://cdvsd0sbex8mo" path="res://assets/backgrounds/background.png" id="2_ttn1a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4ce7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ttn1a")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="ScoresButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "High Scores"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Title" type="Label" parent="CenterContainer"]
layout_mode = 2
